# vorpal

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.bat
.github/workflows/: docs.yml
audiobooker/: __init__.py  binaries.py  cli.py  ingest.py  master.py  synth.py
audiobooker/extract/: __init__.py  pagemodel.py  quality.py  scanned.py
audiobooker/segment/: __init__.py  boilerplate.py  chapters.py  footnotes.py  repair.py
audiobooker/tts/: base.py  kokoro_engine.py
docs/: 01-audit.md  02-product-vision.md  03-architecture.md  04-roadmap.md  05-status.md  06-corpus.md  07-ideation.md  08-voice-training-spike.md  09-human-review-queue.md  10-freeplay-log.md  HANDOFF-NOTES.md  upcoming.md
notebooks/: 01_first_audiobook.ipynb  02_voices.ipynb  03_manifest_and_pipeline.ipynb  04_theatrical_plays.ipynb  05_advanced_options.ipynb  06_library_mode.ipynb
samples/: .gitignore  README.md
sphinx/: Makefile  advanced.md  cli_reference.md  conf.py  getting_started.md  index.rst  make.bat  notebooks.md  notebooks.rst  pipeline.md  plays.md  voices.md
sphinx/_static/: wonderland.css
sphinx/_templates/: layout.html
sphinx/api/: core.rst  index.rst  play.rst  tts.rst
tests/: conftest.py  test_binaries.py  test_boilerplate.py  test_chapters.py  test_epub.py  test_extract_digital.py  test_extract_integration.py  test_extract_scanned.py  test_footnotes.py  test_ingest.py  test_manifest.py  test_master.py  test_master_phase5.py  test_normalize.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase13.py  test_phase14.py  test_phase15.py  test_phase16.py  test_phase17.py  test_phase18.py  test_phase19.py  test_phase20_corpus.py  test_phase24.py  test_phase25.py  test_phase26.py  test_phase27.py  test_phase28.py  test_phase29.py  test_phase30.py  test_phase31.py  test_phase32.py  test_phase33.py  test_phase34.py  test_phase35.py  test_phase36.py  test_phase37.py  test_phase38.py  (+14 more)
trotsky/: military-writings-trotsky-v1.epub  military-writings-trotsky-v2.epub  military-writings-trotsky-v3.epub  military-writings-trotsky-v4.epub
vorpal/: __init__.py  binaries.py  cli.py  export.py  footnotes_narration.py  ingest.py  lexicon.py  manifest.py  master.py  normalize.py  ocr_repair.py  profiles.py  serve.py  summarize.py  synth.py  tone.py
vorpal/extract/: __init__.py  digital.py  epub.py  text.py
vorpal/play/: __init__.py  audition.py  casting.py  chapters.py  characters.py  directions.py  fetcher.py  models.py  parser.py  pipeline.py  synth_router.py
vorpal/qa/: asr.py  fidelity.py  tone_eval.py
vorpal/segment/: boilerplate.py  chapters.py  dialogue.py  frontmatter.py
vorpal/tts/: __init__.py  api_engine.py  base.py  kokoro_approx.py  kokoro_engine.py  mock_engine.py  piper_engine.py  voices.py
