[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vorpal"
version = "0.1.0"
description = "Convert book PDFs into navigable .m4b audiobooks with TTS voice models"
# <3.13 because kokoro>=0.8 (and its misaki g2p stack) caps at Python 3.12
requires-python = ">=3.10,<3.13"
dependencies = [
    "pymupdf>=1.24",
    "pytesseract>=0.3.10",
    "opencv-python-headless>=4.9",
    "pillow>=10.0",
    "numpy>=1.26",
    "soundfile>=0.12",
    "rapidfuzz>=3.0",
    "pysbd>=0.3.4",
    "kokoro>=0.9",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# LLM-pass features (tone tagging) — optional: the deterministic core never
# depends on a model. Baked into the vorpal-box image; on the host:
# pip install -e .[llm]
llm = ["anthropic>=0.40"]
# API-engine features (OpenAI TTS adapter, Phase 7):
# pip install -e .[api]
api = ["requests>=2.28"]

[project.scripts]
vorpal = "vorpal.cli:main"
audiobook = "vorpal.cli:main"   # legacy alias

[tool.setuptools.packages.find]
include = ["vorpal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require external binaries (ffmpeg/ffprobe)",
]
